changed the bar colors

--- a/css/DropDown.css
+++ b/css/DropDown.css
@@ -82,16 +82,17 @@ html, body {
     position: absolute;
     left: 65%; /* Position the left edge of the dropdown at the center of the parent */
     transform: translateX(-50%);
+    border: none;
 
 }
 
 .custom-dropdown .dropdown-content .dropdown-item {
     text-align: center; /* Horizontally center the text */
     padding: 10px 0; /* Adjust padding as needed for vertical alignment */
-    /* Other styles... */
 
 
 }
+
 
 
 
